# adaptation.xorg.driver.xserver-xorg-video-emulfb

./: .gitignore  COPYING  ChangeLog  Makefile.am  configure.ac
debian/: changelog  control  rules  xserver-xorg-video-emulfb.links
man/: Makefile.am
packaging/: xorg-x11-drv-emulfb.spec  xserver-xorg-video-emulfb.spec
src/: Makefile.am  fbdev.c  fbdev.h  fbdev_dpms.c  fbdev_dpms.h
src/crtcconfig/: fbdev_crtc.c  fbdev_crtc_priv.h  fbdev_crtcconfig.c  fbdev_crtcconfig.h  fbdev_mode.c  fbdev_mode.h  fbdev_output_priv.h  lcd_output.c
src/debug/: fbdev_event_trace.c  fbdev_event_trace.h
src/fb/: fbdev_fb.c  fbdev_fb.h
src/fbdevhw/: fbdev_hw.c  fbdev_hw.h
src/util/: fbdev_pixman.c  fbdev_pixman.h  fbdev_util.c  fbdev_util.h
src/v4l2/: v4l2_output_api.c  v4l2_output_api.h  v4l2api.c  v4l2api.h  v4l2config.h
src/xv/: fbdev_v4l2.c  fbdev_v4l2.h  fbdev_video.c  fbdev_video.h  fbdev_video_fourcc.h  fbdev_video_types.h  fbdev_video_v4l2.h  fbdev_video_virtual.c  fbdev_video_virtual.h  xv_types.h
src/xv/arm/: fbdev_video_v4l2.c
src/xv/i386/: fbdev_video_v4l2.c
